# FUSE

./: .dockerignore  .gitignore  AGENTS.md  AOT_CONTRACT.md  AOT_PRODUCTION_PLAN.md  AOT_REPRODUCIBILITY.md  AOT_ROLLBACK_PLAYBOOK.md  AST_SINGLE_SOURCE_PLAN.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXTENSIBILITY_BOUNDARIES.md  GOVERNANCE.md  IDENTITY_CHARTER.md  IMPLEMENT_HTML_DSL.md  LICENSE  LSP_ROADMAP.md  NATIVE_COMPILER_CHECKLIST.md  PLAN-0.8.0.md  PLAN.md  README.md  RELEASE.md  SECURITY.md  V0_1_COMPLETION_PLAN.md  VERSIONING_POLICY.md  fls.md  fuse.md  fuse.toml  runtime.md  scope.md
crates/fuse/: Cargo.toml  build.rs
crates/fuse/src/: aot.rs  assets.rs  cache.rs  cli_args.rs  cli_output.rs  command_ops.rs  deps.rs  dev.rs  main.rs  manifest.rs  model.rs  runtime_env.rs
crates/fuse/tests/: aot_parity_lock.rs  dotenv.rs  project_cli.rs
crates/fusec/: Cargo.toml
crates/fusec/src/: ast.rs  callbind.rs  cli.rs  concurrency_metrics.rs  db.rs  diag.rs  diag_render.rs  format.rs  html_tags.rs  http_client.rs  lexer.rs  lib.rs  loader.rs  main.rs  manifest.rs  observability.rs  openapi.rs  parser.rs  refinement.rs  runtime_assets.rs  runtime_capabilities.rs  runtime_io.rs  runtime_svg.rs  runtime_types.rs  span.rs  task_pool.rs  token.rs
crates/fusec/tests/: README.md  asset_imports.rs  ast_authority_parity.rs  bool_compare_runtime.rs  bytes_runtime.rs  config_runtime.rs  db_pool_concurrency.rs  db_pool_runtime.rs  db_typed_query_runtime.rs  db_upsert_runtime.rs  dep_resolution.rs  frontend_canonicalize.rs  generic_runtime.rs  generic_sema.rs  golden_outputs.rs  html_runtime.rs  interface_runtime.rs  interface_sema.rs  ir_lower_call_targets.rs  lsp_code_actions.rs  lsp_completion_member.rs  lsp_completion_rank.rs  lsp_contracts.rs  (+31 more)
(+302 files in other folders)
