[package]
name = "fuse"
version = "0.2.0"
edition = "2024"
description = "CLI for building and running FUSE language packages."
repository = "https://github.com/dmitrijkiltau/fuse"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
bincode = "1.3"
fuse-rt = { path = "../fuse-rt" }
fusec = { path = "../fusec" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
