[package]
name = "fusec"
version = "0.1.0"
edition = "2021"
default-run = "fusec"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fusec"
path = "src/main.rs"

[dependencies]
fuse-rt = { path = "../fuse-rt" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
