[package]
name = "fusec"
version = "0.1.0"
edition = "2024"
default-run = "fusec"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fusec"
path = "src/main.rs"

[dependencies]
fuse-rt = { path = "../fuse-rt" }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
cranelift-codegen = "0.128"
cranelift-frontend = "0.128"
cranelift-jit = "0.128"
cranelift-module = "0.128"
cranelift-native = "0.128"
cranelift-object = "0.128"
